clang/test/BSC/Negative/Method/BuiltInType/int_function_pointer_undeclared/int_function_pointer_undeclared.cbs
// RUN: %clang_cc1 -verify %s

int getA() { // expected-note {{'getA' declared here}}
             // expected-note@-1 {{'getA' declared here}}
  return 1;
}

int main() {
  int (*fp)() = int::getA; // expected-error {{no member named 'getA' in type 'int'; did you mean simply 'getA'?}}
  int (*fp1)() = &int::getA; // expected-error {{no member named 'getA' in type 'int'; did you mean simply 'getA'?}}
  return 0;
}